# SensorFusion

sf_ws/src/sfip/: CMakeLists.txt  CMakeLists_new.txt  COMPLETED_TASKS.md  PR_SUMMARY.md  README.md  README_updated.md  REFACTORING.md  REFACTORING_GUIDE.md  package.xml
sf_ws/src/sfip/config/: params.yaml
sf_ws/src/sfip/include/: Linearizer.hpp  Linearizer_improved.hpp  Residuals.hpp  Residuals_improved.hpp  SplineState.hpp
sf_ws/src/sfip/include/sfip/: DataProcessor.hpp  Optimizer.hpp  SplineFusionAdapter.hpp  SplineFusionCore.hpp  SplineState.hpp  Types.hpp  WindowManager.hpp  config.hpp
sf_ws/src/sfip/include/utils/: common_utils.hpp
sf_ws/src/sfip/launch/: sfip.launch  sfip_new.launch
sf_ws/src/sfip/msg/: Estimate.msg  Knot.msg  Spline.msg
sf_ws/src/sfip/src/: EstimationInterface.cpp  EstimationInterface_new.cpp  SplineFusion.cpp  SplineFusion_new.cpp  fake_pose_pub.py  test_pose_only.py
sf_ws/src/sfip/src/sfip/: DataProcessor.cpp  Optimizer.cpp  SplineFusionAdapter.cpp  SplineFusionCore.cpp  SplineState.cpp  WindowManager.cpp
sf_ws/src/sfip/test/: comprehensive_integration_test.cpp  figure8_trajectory_test.cpp  integration_test.cpp  simple_bell_test.cpp  spline_test_simple.cpp  spline_test_standalone.cpp  standalone_utils.hpp  test_optimizer.cpp  test_residuals.cpp
